# llm-zoomcamp

./: pyproject.toml
.devcontainer/: devcontainer.json
