[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.4"
notebook = "7.1.2"
openai = "^1.35.7"
elasticsearch = "^8.14.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
